-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.1.0
-
None
-
OSX 10.8
For example, while setting Qt::FramelessBorderHint on the QWindow. This can cause the qquickshadereffectsource to get stuck:
// Crate large textures on high-dpi displays. if (sourceItem()) textureSize *= d->window->devicePixelRatio(); const QSize minTextureSize = d->sceneGraphContext()->minimumFBOSize(); // Keep power-of-two by doubling the size. while (textureSize.width() < minTextureSize.width()) textureSize.rwidth() *= 2; <- rwidth is 0 here.